# IF3260-Paint

./: .gitignore  CMakeLists.txt  Color.hpp  Line.cpp  Line.hpp  Makefile  Master.cpp  Master.hpp  MouseInputData.cpp  MouseInputData.hpp  MoveableObject.cpp  MoveableObject.hpp  MoveablePlane.cpp  MoveablePlane.hpp  Object.cpp  Object.hpp  Pixel.cpp  Pixel.hpp  Plane.cpp  Plane.hpp  PlaneFiller.cpp  PlaneFiller.hpp  Point.cpp  Point.hpp  README.MD  Rectangle.cpp  Rectangle.hpp  View.cpp  View.hpp  contoh.txt  habibi.txt  main.cpp  prev.cpp  test.cpp
Asset/: background_horizontal_scroll.txt  background_toolbar.txt  background_vertical_scroll.txt  icon_color.txt  icon_exit.txt  icon_fill_color.txt  icon_load.txt  icon_new.txt  icon_pan_down.txt  icon_pan_left.txt  icon_pan_right.txt  icon_pan_up.txt  icon_pick_color.txt  icon_rectangle.txt  icon_rotate.txt  icon_rotate_ccw.txt  icon_rotate_cw.txt  icon_save.txt  icon_scale_down.txt  icon_scale_up.txt  icon_shape.txt  icon_shape_square.txt  icon_shape_triangle.txt  icon_trash.txt  icon_triangle.txt  icon_zoom_in.txt  icon_zoom_out.txt  object_building.txt  object_kolam.txt  object_kotaksial.txt  object_map.txt  object_pohon.txt  object_road.txt  object_rotate_symbol.txt  scroll_bar.txt  symbol_rectangle.txt
Asset/Building/: object_building.txt  object_building_ATM_a.txt  object_building_ATM_b.txt  object_building_Arsitektur.txt  object_building_Aula_Timur.txt  object_building_Aula_barat.txt  object_building_BSC_B.txt  object_building_CADL.txt  object_building_CAS.txt  object_building_CBar.txt  object_building_CC_Timur.txt  object_building_CIBAY.txt  (+36 more)
(+42 files in other folders)
