cmake_minimum_required (VERSION 2.6)
project (if3260_3d-model-plane-crasher)
set(MAIN main.cpp)
set(TEST test.cpp)
set(LIBS Line.cpp Master.cpp MoveableObject.cpp MoveablePlane.cpp Plane.cpp Pixel.cpp PlaneFiller.cpp Point.hpp Point.cpp Object.cpp Rectangle.cpp Rectangle.hpp)
set(CMAKE_CXX_FLAGS "-O2 -pthread -lSDL2 -lSDL2_image")
add_executable(main ${MAIN} ${LIBS})
add_executable(test ${TEST} ${LIBS})
